--- a/part2/notes/src/App.css
+++ b/part2/notes/src/App.css
@@ -1,11 +1,16 @@
-.no-bullets {
-    list-style-type: none; /* Remove bullets */
-    padding: 0; /* Remove padding */
-    margin: 0; /* Remove margins */
-}
-
-.person-added-message {
+h1 {
     color: green;
+    font-style: italic;
+  }
+
+.note {
+    color: grey;
+    padding-top: 5px;
+    font-size: 15px;
+  }
+
+.error {
+    color: red;
     background: lightgrey;
     font-size: 20px;
     border-style: solid;
